updates URLs and my email address. i sold jeremyjones.com years ago...

--- a/apachetop-0.1/README
+++ b/apachetop-0.1/README
@@ -3,7 +3,7 @@ README for apachectop version 0.1
 
 WEB
 
-  http://www.jeremyjones.com/apachetop/
+  https://github.com/JeremyJones/Apachetop
 
 ABOUT
 
@@ -33,7 +33,7 @@ DOCUMENTATION
 
 AUTHOR
 
-  Jeremy Jones <jer@jeremyjones.com>
+  Jeremy Jones <jer@jerjones.me>
 
 COPYRIGHT
 
